[package]
name = "mandelbrot_fractal_generator"
version = "0.1.3"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
edition = "2021"
description = "A Rust project to generate and visualize the Mandelbrot fractal." 
repository = "https://github.com/bensatlantik/Rust-Libraries-Binaries"
license = "MIT"

# Specify the binary target
[[bin]]
name = "mandelbrot_fractal_generator"
path = "src/main.rs"

[dependencies]
image = "0.23.14"
